# SimulatedAnnealingInTheHitchcockProblem

./: .gitignore  CMakeLists.txt  README.md  clean.sh  run.sh
example_data/: cracow.txt  data.txt  example_big_input.txt  example_input.txt  example_medium_input.txt  example_small_input.txt  task01_data.txt
inc/: CostCalculation.hpp  Graph.hpp  SimulatedAnnealing.hpp  TransportAlgorithm.hpp  debug.hpp  transport_helpers.hpp
src/: CostCalculation.cpp  Graph.cpp  SimulatedAnnealing.cpp  TransportAlgorithm.cpp  main.cpp
